syntax = "proto3";

package vibecast.proto;

option go_package = "github.com/vibecast/anomaly-detector/internal/models/proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

// Message represents a core message in the VibeCast system
message Message {
  string id = 1;
  string type = 2;
  string source = 3;
  string destination = 4;
  google.protobuf.Any payload = 5;
  map<string, string> headers = 6;
  google.protobuf.Timestamp timestamp = 7;
  int32 priority = 8;
  int32 retry_count = 9;
  int64 ttl = 10;
}

// Event represents a real-time event
message Event {
  string id = 1;
  string type = 2;
  string source = 3;
  google.protobuf.Any data = 4;
  map<string, string> metadata = 5;
  google.protobuf.Timestamp timestamp = 6;
  repeated string tags = 7;
}

// QueueMessage represents a message in the persistent queue
message QueueMessage {
  string queue_name = 1;
  Message message = 2;
  int32 delivery_count = 3;
  google.protobuf.Timestamp enqueued_at = 4;
  google.protobuf.Timestamp next_delivery_at = 5;
  bool dead_letter = 6;
}

// Subscription represents a topic subscription
message Subscription {
  string id = 1;
  string topic = 2;
  string subscriber_id = 3;
  repeated string filters = 4;
  bool active = 5;
  google.protobuf.Timestamp created_at = 6;
}

// BrokerStats represents broker statistics
message BrokerStats {
  int64 messages_published = 1;
  int64 messages_delivered = 2;
  int64 active_subscriptions = 3;
  int64 failed_deliveries = 4;
  google.protobuf.Timestamp last_updated = 5;
}

// RateLimitInfo represents rate limiting information
message RateLimitInfo {
  string key = 1;
  int32 limit = 2;
  int32 remaining = 3;
  google.protobuf.Timestamp reset_time = 4;
  int64 window_size = 5;
}